force-app/main/default/objects/DE_ResourceLink__c/DE_ResourceLink__c.object-meta.xml
<CustomObject>
    <label>Generic Highlight</label>
    <nameField>
        <displayFormat>RL-{0000}</displayFormat>
        <label>Resource ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Generic Highlights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>