force-app/main/default/objects/DE_ResourceLink__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>2nd line below the title</description>
    <inlineHelpText>2nd line below the title</inlineHelpText>
    <label>Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>