force-app/main/default/objects/DE_ResourceLink__c/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <label>Icon</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>