force-app/main/default/objects/DE_ResourceLink__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <label>Navigation Link</label>
    <type>Url</type>
</CustomField>