force-app/main/default/objects/DE_ResourceLink__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Icon__c</columns>
    <columns>Image_URL__c</columns>
    <columns>Label__c</columns>
    <columns>Link__c</columns>
    <columns>Date__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>